fix(ui): Correct color / spacing / font of release tag hovercard

--- a/src/sentry/static/sentry/less/sentry-hovercard.less
+++ b/src/sentry/static/sentry/less/sentry-hovercard.less
@@ -23,6 +23,9 @@
   box-shadow: 0 0 35px 0 rgba(67, 62, 75, 0.2);
   border: 1px solid @trim;
 
+  // The hovercard may appear in different contexts, don't inherit fonts
+  font-family: @font-family-base;
+
   // Default align hovercard top-middle
   bottom: 28px;
   left: 50%;
